<resources>
    <string name="app_name">KeepToo</string>
    <string name="facebook_app_id">1373665722798910</string>
    <string name="skip">Skip</string>
    <string name="terms">Terms and Privacy Policy</string>
    <string name="location_activity">Location Activity</string>
    <string name="widget_position">Select the position that you want the widget to appear.</string>
    <string name="spread_text1">Spread the word</string>
    <string name="spread_text"> Enjoying our app? send a link to a friend and welcome him to join our great service</string>
    <string name="rate_us">KeepToo Rate us</string>
    <string name="rate_us_title">Enjoying KeepToo? </string>
    <string name="rate_us_subtitle">What is your level of satisfaction of application?</string>
    <string name="rate_us_text">Rate us</string>
    <string name="safe_service">Safe Service</string>
    <string name="safe_service_text">Enjoying our safe service? </string>
    <string name="safe_service_subtext">We will be glad to continue to give\n you the service, plus a fee to continue\n to enjoy full security, efficiently and easily!</string>
    <string name="year"> 1 year</string>
    <string name="month"> 3 Mo</string>
    <string name="month1"> 1 Mo</string>
    <string name="dollar">$</string>
    <string name="nineteen">19</string>
    <string name="nine">9</string>
    <string name="three">3</string>
    <string name="buy_now">Buy Now</string>
    <string name="message_shortcut_short_label">Recent Media</string>
    <string name="message_shortcut_long_label">See your all messages in one click</string>
    <string name="message_disabled_message">Messages are disabled for now</string>
    <string name="message_activity">Message Activity</string>
    <string name="update_dynamic_shortcuts">Update Dynamic Shortcuts</string>
    <string name="add_dynamic_shortcuts">Add Dynamic Shortcuts</string>
    <string name="delete_dynamic_shortcuts">Delete Dynamic Shortcuts</string>
    <string name="add_pinned_shortcuts">Add Pinned Shortcuts</string>
    <string name="dynamic_shortcut">Dynamic Shortcut</string>
    <string name="pinned_shortcut">Pinned Shortcut</string>
    <string name="fb_login_protocol_scheme">fb1373665722798910</string>
    <string name="Be_organized">Be organized</string>
    <string name="title_activity_login">Login</string>
    <string name="tncdisclaimer">Please accept <b><font color="#e9e9e9">Terms and Privacy Policy</font></b></string>
    <string name="aboutus">About us</string>
    <string name="keeptoo">Keep</string>
    <string name="too">Too</string>
    <string name="title">Organize your gallery items on the\ngo with a set of easy to use\nfeatures</string>
    <string name="title1">Protect your sensitive photos and\nvideos and get safe access</string>
    <string name="safe">Safe</string>
    <string name="title2">Use on on-screen widget to\norganize your media files fast and\neasy</string>
    <string name="storage_access">Storage Access Permission</string>
    <string name="permission_description">KeepToo requires access to the following\npermission:Storage Allow ?</string>
    <string name="deny">DENY</string>
    <string name="allow">ALLOW</string>
    <string name="tour">Tour</string>
    <string name="temp3">The Temp Option</string>
    <string name="temp1">The Temp is a temporary gallery\nthat keep your media files temporarily</string>
    <string name="temp2">After the time frame is ended,the media\nfile will be automatically deleted</string>
      <string name="next">Next</string>
    <string name="temp">Temp</string>
    <string name="setting">Setting</string>
    <string name="clean">Clean</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="may_be_later">Maybe later</string>
    <string name="storage_access1">You must confirm Storage\npermission access to enjoy\nKeepToo.Allow?</string>
    <string name="storage_access2">Please switch on Screen Overlay\npermission to preview new\ndetected media on screen</string>
    <string name="later">LATER</string>
    <string name="ok">OK</string>
    <string name="retore_text">Restore ,in a flash</string>
    <string name="restore_subtitle">Restore all media file that are in Temp\ngallery.Just select the media file you\nwant to restore and click the restore button</string>
    <string name="clean_free">Clean in your free time</string>
    <string name="end_tour">End Tour</string>
    <string name="next_time">Next time you will get media files,Our\nwidget will pop up in your device\ndesktop screen</string>
    <string name="keepsafe">KeepSafe</string>
    <string name="finger_scanner_intro_text">This is the first user in KeepSafe\nin order to open a fault,please\nchoose your identification method</string>
    <string name="use_finger">Use fingerprint</string>
    <string name="enter_four_digit_backup">Enter 4 digit backup code</string>
    <string name="enter_four_digit_backup_again">Enter 4 digit backup code Again</string>
    <string name="or">or</string>
    <string name="code">Code</string>
    <string name="enter_four_digit">Enter 4 digit code</string>
    <string name="use">Use\nfingerprint</string>
    <string name="finger_print">fingerprint</string>
    <string name="have_time">Have time to spare?,you can clear all\nyour media history from your device</string>
    <string name="thats_all">That\'s all for now</string>
    <string name="see_you">See You Soon</string>
    <string name="safe1">KeepSafe,better than sorry</string>
    <string name="safe2">Safe is protected gallery that you can\nsave sensitive media files into </string>
    <string name="safe3">The plus + button gives you the option\nto import file,take a photo or open a\nnew folder </string>
    <string name="an_error_has_been_occoured">An error has been occoured</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_dts_gallery">Recent Media</string>
    <string name="save">Save</string>
    <string name="recent_media">Recent Media</string>
    <string name="save24">Keep to</string>
    <string name="keep_safe">KeepSafe</string>
    <string name="save_for_24_hours">save for 24 hours</string>
    <string name="delete">Delete</string>
    <string name="grand_tour">The KeepToo grand tour</string>
    <string name="grand_tour1">Would you like to take a couple of seconds\nand get to know your best features?</string>
    <string name="erase_soon"> Soon erase</string>
    <string name="restore">Restore</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">UnselectAll</string>
    <string name="setTime">timeset</string>
    <string name="setLanguage">setlanguage</string>
    <string name="dts_gallery">Recent Media</string>
    <string name="restore_photos">Temp Media</string>
    <string name="settings">Settings</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="gallery">Recent Media</string>
    <string name="rearrange_photos">Rearrange</string>
    <string name="dummy_date">11-03-2018</string>
    <string name="edit">Edit</string>
    <string name="temp_media_text">No media currently available in Temp\n media. Temp media is available after\n scheduling media to delete</string>
    <string name="safe_setting_title">Safe Setting</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="help">Help &amp; Support </string>
    <string name="help_text">We will be happy to assist you in any\n way needed.\n Just send us your request and we will\n get back to you as soon as possible</string>
    <string name="send_mail">Send Mail</string>
    <string name="share">Share</string>
    <string name="rearrange_image">Rearrange Image</string>
    <string name="policy_approval">Policy Approval</string>
</resources>