<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/topbar_finger_scan"
        android:id="@+id/top"></include>


    <RelativeLayout
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finger_scanner_intro_text"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            />

        <RelativeLayout
            android:id="@+id/rel_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_group_2143">



        </RelativeLayout>

     <TextView
         android:id="@+id/tv_use_finger"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/use_finger"
         android:textSize="16dp"
         android:textColor="@android:color/white"
         android:layout_below="@+id/rel_center"
         android:gravity="center"/>
     <TextView
         android:id="@+id/tv_or"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/or"
         android:textSize="16dp"
         android:textColor="@android:color/white"
         android:layout_below="@+id/tv_use_finger"
         android:gravity="center"/>
<!--
     <TextView
         android:id="@+id/tv_enter4digit"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/enter_four_digit"
         android:textSize="16dp"
         android:textColor="@android:color/white"
         android:layout_below="@+id/tv_or"
         android:gravity="center"/>
-->

        <Button
            android:id="@+id/button_enter4digit"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:textAllCaps="false"
            android:text="@string/enter_four_digit_backup"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:background="@color/title_color"
            android:layout_below="@+id/tv_or"/>




    </RelativeLayout>

</RelativeLayout>