<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gallery_tour_background"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/voilet_dark"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:src="@drawable/ic_arrow_left_solid" />

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/safe_service"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"

                android:layout_gravity="center"
                android:textSize="16sp"
                />




        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:background="@color/gallery_tour_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/restore_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:text="@string/safe_service_text"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@+id/restore_title"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                android:text="@string/safe_service_subtext"
                />
            <RelativeLayout
                android:id="@+id/rel_center"
                android:layout_below="@+id/tv_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:background="@color/white">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:scaleType="fitXY"

                    android:id="@+id/center"
                    android:src="@drawable/top_vector"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    android:id="@+id/center2"
                    android:src="@mipmap/safe_service_center_icon"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/center"

                    android:scaleType="fitXY"

                    android:id="@+id/center1"
                    android:rotation="180"
                    android:src="@drawable/top_vector"/>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_center_price"
                android:layout_width="match_parent"
                android:layout_below="@+id/rel_center"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="104dp"
                    android:layout_height="104dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:background="@drawable/drawble_service"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textStyle="bold"

                        android:textColor="@color/keeptp_background"
                        android:textSize="20dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/keeptp_background"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nineteen"
                            android:textColor="@color/keeptp_background"
                            android:textStyle="bold"
                            android:textSize="56dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:background="@drawable/drawble_service"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/gallery_tour_background"
                        android:textStyle="bold"
                        android:text="@string/month"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar"
                            android:textColor="@color/gallery_tour_background"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nine"
                            android:textColor="@color/gallery_tour_background"
                            android:textStyle="bold"
                            android:textSize="56dp"/>

                    </LinearLayout>



                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_price"
                    android:layout_width="104dp"
                    android:layout_height="104dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:background="@drawable/drawble_service"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:textColor="@color/keeptp_background"
                        android:textStyle="bold"

                        android:text="@string/month1"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            android:textColor="@color/keeptp_background"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/three"
                            android:textSize="56dp"
                            android:textStyle="bold"
                            android:textColor="@color/keeptp_background"
                            />

                    </LinearLayout>



                </LinearLayout>




            </LinearLayout>
            <TextView
                android:id="@+id/tv_buy_now"
                android:layout_below="@+id/ll_center_price"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="65dp"
                android:layout_marginTop="30dp"
                android:text="@string/buy_now"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:background="@drawable/widget_behave"
                />


        </RelativeLayout>


    </ScrollView>




</RelativeLayout>