<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"

        android:background="@color/green_dark">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_arrow_left_solid" />
        <TextView
            android:id="@+id/tv_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/rate_us"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="61dp"
        android:background="@color/keeptp_background">
        <LinearLayout
            android:id="@+id/lltop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us_title"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_us_subtitle"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:textSize="16dp"
                />
        </LinearLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_center"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_group_2153">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </RelativeLayout>
    <TextView
        android:id="@+id/tv_take_a_tour"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/rate_us_text"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rel_center"
        android:textColor="@android:color/white"
        android:layout_marginLeft="64dp"
        android:textSize="20sp"
        android:layout_marginRight="64dp"
        android:background="@drawable/center_button"

        />


</RelativeLayout>